# adaptive

./: .gitignore  Makefile  README.md  setup.cfg  setup.py
adaptive/: __version__.py
adaptive/client/: client.py  user_client.py
adaptive/interface/ad_data/: ttypes.py
adaptive/interface/ad_event/: ttypes.py
adaptive/interface/adaptive/: Adaptive-remote  Adaptive.py  __init__.py  ttypes.py
adaptive/interface/biz_data/: ttypes.py
adaptive/interface/user_data/: ttypes.py
adaptive/server/: Adaptive_server.cpp  Makefile
adaptive/server/interface/: Adaptive.cpp  Adaptive.h  Adaptive_constants.cpp  Adaptive_constants.h  Adaptive_server.skeleton.cpp  Adaptive_types.cpp  Adaptive_types.h  Makefile_constants.cpp  Makefile_constants.h  Makefile_types.cpp  Makefile_types.h  ad_data_constants.cpp  ad_data_constants.h  ad_data_types.cpp  ad_data_types.h  ad_event_constants.cpp  ad_event_constants.h  ad_event_types.cpp  ad_event_types.h  biz_data_constants.cpp  biz_data_constants.h  biz_data_types.cpp  biz_data_types.h  datatypes_constants.cpp  datatypes_constants.h  datatypes_types.cpp  datatypes_types.h  exceptions_constants.cpp  exceptions_constants.h  exceptions_types.cpp  exceptions_types.h  user_attributes_constants.cpp  user_attributes_constants.h  user_attributes_types.cpp  user_attributes_types.h  user_data_types.h  (+3 more)
adaptive/server/server_build/: CMakeLists.txt
adaptive/simul/: users.py
adaptive/thrift/: Adaptive.thrift  Makefile  Makefile.thrift  ad_data.thrift  ad_event.thrift  biz_data.thrift  user_data.thrift
notebooks/: test_create_user_account.ipynb
(+6 files in other folders)
